--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
     justify-content: center;
 }
 
+
 .screen input {
     width: 350px;
     height: 40px;
@@ -53,7 +54,7 @@ body {
     height: 90px;
 }
 
-.numbers .show-1, .show-2, .show-3 {
+.numbers .show {
     /* width: 60%; */
     /* margin-left: 16%; */
     display: flex;
