--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,13 @@ body {
     margin: auto;
     max-width: 1366px;
 }
+
 .parent {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .screen {
     margin-bottom: 5px;
     width: 50%;
@@ -88,19 +90,30 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .equal-clear input {
-margin-right: 5px;
+    margin-right: 5px;
 }
+
 .equal-clear button {
     margin-left: 5px;
 }
+
 .plus-equal {
     height: 85px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    align-items: center;
 }
-.plus-equal :nth-child(1) {
-        width: 35px;
-    height: 60px;
+
+.plus-equal button:nth-child(1) {
+    width: 35px;
+    height: 50px;
+}
+
+
+.plus-equal button:nth-child(2) {
+    width: 20px;
+    height: 20px;
 }
